# fediurl

./: .cirrus.yml  .env.sample  .gitignore  Cargo.toml  Fediurl.toml.sample
browser-extension/source/: background.js  background.ts  manifest.json
migrations/: 20230519040740_create_instances.up.sql  20230519040803_create_users.up.sql
public/css/: theme.css
src/: config.rs  db.rs  dirs.rs  form.rs  lib.rs  main.rs  models.rs  string_ext.rs  templates.rs  web.rs  xdg.rs
src/form/: validate.rs
src/models/: instance.rs  user.rs
src/templates/: 413.html  form.rs  home.rs  layout.rs  session.rs
src/web/: rewrite.rs  session.rs  static.rs
