[package]
name = "fediurl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
pretty_env_logger = "0.4.0"
reqwest = { version = "0.11.14", default-features = false, features = ["rustls-tls", "gzip", "json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
simple-eyre = "0.3.1"
tokio = { version = "1.24.2", features = ["rt-multi-thread", "macros"] }

[target.'cfg(windows)'.dependencies]
dirs = "4.0.0"

[target.'cfg(not(windows))'.dependencies]
xdg = "2.4.1"
