[package]
name = "fediurl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
join_to_string = "0.1.3"
markup = { git = "https://github.com/wezm/markup.rs.git" }
reqwest = { version = "0.11.14", default-features = false, features = ["rustls", "gzip", "json"] }
rocket = { version = "0.5.0-rc.3", features = ["json", "secrets"] }
rust-argon2 = { version = "1.0.0", default-features = false }
sentry = { version = "0.28.0", default-features = false, features = ["backtrace", "contexts", "panic", "reqwest", "rustls"] }
sqlx = { version = "0.6.2", features = [ "runtime-tokio-rustls", "sqlite", "time" ] } # needs to match rocket_db_pools
time = { version = "0.3.5", features = ["std", "formatting"] } # version should match rocket
serde_json = "1.0.94"
url = "2.3.1"

[dependencies.rocket_db_pools]
version = "0.1.0-rc.3"
features = ["sqlx_sqlite"]

[profile.dev.package.sqlx-macros]
opt-level = 3

