[package]
name = "fediurl"
version = "0.1.0-alpha2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
join_to_string = "0.1.3"
markup = { git = "https://github.com/wezm/markup.rs.git" }
reqwest = { version = "0.11.18", default-features = false, features = ["rustls", "gzip", "json"] }
rocket = { version = "0.5.0-rc.3", features = ["json", "secrets"] }
rust-embed = { version = "6.6.1", features = ["rocket"] }
sentry = { version = "0.31.3", default-features = false, features = ["backtrace", "contexts", "panic", "reqwest", "rustls"] }
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = [ "runtime-tokio-rustls", "sqlite", "time" ] } # needs to match rocket_db_pools
time = { version = "0.3.21", features = ["std", "formatting"] } # version should match rocket
url = "2.3.1"

[dependencies.rocket_db_pools]
version = "0.1.0-rc.3"
features = ["sqlx_sqlite"]

[profile.dev.package.sqlx-macros]
opt-level = 3
